SSI processor with accessible facade